Populate profile page with content

--- a/profile/index.html
+++ b/profile/index.html
@@ -5,6 +5,7 @@
 <head>
   <title>Jonathan Simmonds | Blog and Portfolio</title>
   <link href="../style.css" rel="stylesheet" type="text/css"/>
+  <link href="skills.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -27,8 +28,97 @@
     </div>
     <div class="body">
       <p>
-        TODO
+        I'm a professional Software Engineer. I currently work on debugger
+        tooling, although have seconded to many other product groups, from
+        engineering to marketing. I am also a Scrum Master and have had
+        mentoring and line-management responsibilities.
       </p>
+      <p>
+        For an up-to-date list of my professional experience, see my LinkedIn:
+        <a href="http://www.linkedin.com/profile/view?id=139050280"><img class="icon" src="../images/icon_li.png"/></a>
+      </p>
+
+      <h2>Skill Matrix</h2>
+      <p>
+        Below is a list of my professional skills. These are marked as either:
+        <ul>
+          <li class="basic">-
+            understanding of the concept and first-hand experience, sufficient
+            for most basic or frequent tasks but no more.
+          </li>
+          <li class="intermediate">-
+            moderate knowledge and experience, sufficient for all frequent tasks.
+          </li>
+          <li class="strong">-
+            in-depth knowledge and considerable experience, sufficient for
+            almost all tasks.
+          </li>
+          <li class="expert">-
+            exhaustive knowledge and experience, considered the subject-matter
+            expert amonst my peers.
+          </li>
+        </ul>
+        Skills I would like to improve are marked with a &#9733;
+      </p>
+
+      <table class="skills">
+        <tbody>
+          <tr>
+            <th>Skill</th>
+            <th>Ability</th>
+          </tr>
+          <!-- Languages -->
+          <tr><td>Java</td><td class="strong"></td></tr>
+          <tr><td>C/C++</td><td class="strong"></td></tr>
+          <tr><td>Rust</td><td class="basic">&#9733;</td></tr>
+          <tr><td>Assembly (Arm)</td><td class="intermediate"></td></tr>
+          <tr><td>Python</td><td class="strong"></td></tr>
+          <tr><td>Perl</td><td class="basic"></td></tr>
+          <tr><td>Groovy</td><td class="intermediate"></td></tr>
+          <tr><td>Bash</td><td class="strong"></td></tr>
+          <tr><td>LaTeX</td><td class="intermediate"></td></tr>
+          <tr><td></td><td></td></tr>
+
+          <!-- Build Tools -->
+          <tr><td>Ant</td><td class="intermediate"></td></tr>
+          <tr><td>Gradle</td><td class="basic">&#9733;</td></tr>
+          <tr><td>CMake</td><td class="strong"></td></tr>
+          <tr><td>GNUMake</td><td class="intermediate"></td></tr>
+          <tr><td></td><td></td></tr>
+
+          <!-- VCS -->
+          <tr><td>Git</td><td class="expert">&lt;3</td></tr>
+          <tr><td>SVN</td><td class="intermediate"></td></tr>
+          <tr><td></td><td></td></tr>
+
+          <!-- Operating Systems -->
+          <tr><td>Linux</td><td class="strong"></td></tr>
+          <tr><td>Windows</td><td class="intermediate"></td></tr>
+          <tr><td>Embedded Systems</td><td class="intermediate"></td></tr>
+          <tr><td>RTOSes</td><td class="strong"></td></tr>
+          <tr><td></td><td></td></tr>
+
+          <!-- Technologies -->
+          <tr><td>FlexNet Publisher</td><td class="expert"></td></tr>
+          <tr><td>Eclipse Framework</td><td class="intermediate"></td></tr>
+          <tr><td>OSGi Framework</td><td class="intermediate">&#9733;</td></tr>
+          <tr><td>LLVM</td><td class="basic"></td></tr>
+          <tr><td></td><td></td></tr>
+
+          <!-- Tools -->
+          <tr><td>Jenkins</td><td class="intermediate"></td></tr>
+          <tr><td>Ansible</td><td class="basic"></td></tr>
+          <tr><td></td><td></td></tr>
+        </tbody>
+      </table>
+
+      <h2>Accreditations</h2>
+      <ul>
+        <li>Arm Accredited Engineer</li>
+        <li>Oracle Certified Associate, Java SE 8 Programmer</li>
+        <li>Certified ScrumMaster</li>
+      </ul>
+
     </div>
   </div>
   <div class="sticky_footer_spacer"></div>
