Populate woodworking page

--- a/woodworking/index.html
+++ b/woodworking/index.html
@@ -5,9 +5,10 @@
 <head>
   <title>Jonathan Simmonds | Blog and Portfolio</title>
   <link href="../style.css" rel="stylesheet" type="text/css"/>
+  <script type="text/javascript" src="../gallery.js"></script>
 </head>
 
-<body>
+<body onload="loadGalleries()">
 <div class="sticky_footer_pre">
   <div class="header_wrapper">
     <div class="header">
@@ -27,8 +28,170 @@
     </div>
     <div class="body">
       <p>
-        TODO
+        Outside of work, one of my hobbies is woodworking. I particularly enjoy
+        the contrast to my day-job and I find it an effective way to unwind
+        while also channeling my passion for making.
       </p>
+      <p>
+        I almost exclusively use hand-tools. This is mostly because I enjoy the
+        process and the connection with the piece it builds, knowing that it was
+        made purely from my own energy. Practical reasons also play a concern:
+        I have nowhere to put a band saw, table saw, planer, router, mill or
+        lathe.
+      </p>
+      <p>
+        The larger projects I have undertaken are listed here.
+      </p>
+
+
+      <h1>Under-stairs storage</h1>
+      <div class="image_wrapper">
+        <img class="image_content"/>
+        <ul class="image_options">
+          <li>gallery/understairs_1.jpg</li>
+          <li>gallery/understairs_2.jpg</li>
+          <li>gallery/understairs_3.jpg</li>
+          <li>gallery/understairs_4.jpg</li>
+          <li>gallery/understairs_5.jpg</li>
+          <li>gallery/understairs_6.jpg</li>
+          <li>gallery/understairs_7.jpg</li>
+          <li>gallery/understairs_8.jpg</li>
+        </ul>
+        <span class="image_caption">Image 0 of 0</span>
+        <span class="image_arrow_left">&#8592;</span>
+        <span class="image_arrow_right">&#8594;</span>
+      </div>
+      <b>Finished:</b> August 2018<br/>
+      <b>Description:</b> The under-stairs drawers were my first sizeable
+        carpentry project. It took me a year start-to-finish, however it spent
+        months at a time parked waiting for me to find enthusiasm to continue
+        it - it probably would have taken about 10 consecutive weeks (of
+        evenings and weekends).<br/>
+        I learned a lot doing it - most of all not to assume any surface is
+        parallel or perpendicular to any other when dealing with house
+        frames!<br/>
+        I started by knocking out the wall underneath my stairs, which was
+        previously a very impractical cupboard accessible only from behind. In
+        the resulting void I constructed a frame for the drawers to run in and
+        built it into the studs I had revealed when I removed the wall. I
+        ensured the frame had sufficient horizontal supports to attach the
+        drawer runners to later.<br/>
+        Next I lined the frame with plywood to hide the frame when the drawers
+        were extended. This was easier said than done - the drawer voids were
+        all 1m deep and none of them were comfortable spaces for an adult. I
+        then faced the front of the frame to bring it flush with the outer
+        stringer. This mostly finished the frame.<br/>
+        For the drawers, I started by making the fronts out of oak. This was
+        more time-consuming than it should have been as they were all different
+        sizes, lacked right-angles (a result of tying the drawer frame to that
+        of the house) and needed tapering to ensure a flush look when closed.
+        Having made the fronts, I constructed the bodies out of 12mm plywood,
+        butt-jointed, glued and screwed together. Not a fancy work of joinery,
+        but they were large drawers and I knew I was going to paint them. These
+        went together fairly quickly, and then received several coats of paint.
+        They all have notches at the rear as the corridor they will extend into
+        isn't actually wide enough to simply slide them in, so they have to be
+        dropped and rotated in - which the notches allow (and turned out to be
+        an interesting mathematical solution to calculate the correct size and
+        position).<br/>
+        Finally I fitted the soft-close, push-to-open full-extension runners
+        (the longest I could find at 700mm), using 3 per drawer for the
+        triangular drawers and 4 for the rectangular one. This ensured they were
+        strong enough to handle being fully loaded. To the same end I also
+        reinforced the drawers with vertical bearers. The downside of using
+        multiple runners per drawer is obviously that they must be aligned
+        perfectly, and I spent 12-hours fine-tuning all the runners to ensure
+        each drawer closed smoothly and the push-to-open worked (and had enough
+        space behind the front to push into).<br/>
+        I'm really pleased with the result - I love how it looks, and it has
+        massively increased how accessible that storage space is.<br/>
+      <b>Further Information:</b> Blog post TBD.<br/>
+
+
+      <h1>Blackboard</h1>
+      <div class="image_wrapper">
+        <img class="image_content"/>
+        <ul class="image_options">
+          <li>gallery/blackboard_1.jpg</li>
+          <li>gallery/blackboard_2.jpg</li>
+          <li>gallery/blackboard_3.jpg</li>
+        </ul>
+        <span class="image_caption">Image 0 of 0</span>
+        <span class="image_arrow_left">&#8592;</span>
+        <span class="image_arrow_right">&#8594;</span>
+      </div>
+      <b>Finished:</b> January 2019<br/>
+      <b>Description:</b> I made this blackboard as a birthday gift for my
+        parents when they failed to find something of adequate quality which
+        would fit in their kitchen - the best they could find was a poor
+        quality blackboard from Amazon with some of the worst mitres I've ever
+        seen (unforgivable when mass-produced by machine).<br/>
+        To make it I bought a cheap LUNS blackboard from IKEA, which I liked as
+        chalk adhered to it well and it was magnetic. I then carefully extracted
+        the blackboard surface (and turned the frame into kindling) and cut it
+        to the desired size. Next I created a frame out of oak, joined with
+        half-lap mites all around, ploughed a &#8539; groove in all of them and
+        cut a key-hole mounting mechanism. Finally I added a shelf for chalk
+        before finishing with shellac.<br/>
+        The entire project took me two weeks.<br/>
+
+
+      <h1>Desk</h1>
+      <div class="image_wrapper">
+        <img class="image_content"/>
+        <ul class="image_options">
+          <li>gallery/desk_1.jpg</li>
+        </ul>
+        <span class="image_caption">Image 0 of 0</span>
+        <span class="image_arrow_left">&#8592;</span>
+        <span class="image_arrow_right">&#8594;</span>
+      </div>
+      <b>Finished:</b> May 2018<br/>
+      <b>Description:</b> My desk is made from 4 solid oak boards, laminated
+        together. Each board was 225 x 38 mm and 1.8m long. The desk is 1.7m
+        wide, 87cm deep and 74cm high. Being solid oak it is exceptionally
+        solid. I contracted a steel-works in Cornwall to make the legs, which
+        are standard 80 x 40 mm box-section steel welded into a rectangle and
+        simply clear-coated to preserve their industrial appearance. The top is
+        finished in Polyurethane to stand up to daily use.<br/>
+        The entire project only took me 1 weekend, plus evenings of the
+        subsequent week to apply finish. I'm really happy with how it turned
+        out and I ensured I placed the most figured board at the front to give
+        the desk character.<br/>
+
+
+      <h1>Workbench</h1>
+      <div class="image_wrapper">
+        <img class="image_content"/>
+        <ul class="image_options">
+          <li>gallery/workbench_1.jpg</li>
+          <li>gallery/workbench_2.jpg</li>
+          <li>gallery/workbench_3.jpg</li>
+          <li>gallery/workbench_4.jpg</li>
+        </ul>
+        <span class="image_caption">Image 0 of 0</span>
+        <span class="image_arrow_left">&#8592;</span>
+        <span class="image_arrow_right">&#8594;</span>
+      </div>
+      <b>Finished:</b> April 2018<br/>
+      <b>Description:</b> Made from 15, 4m long red-wood 2x4s this was my first
+        large project. It was made to a Paul Sellers design, modified to measure
+        5ft x 3ft, with a well in the center. It also has two shelves between
+        the legs to add storage and even more weight (it weighs 130kg unladen).
+        It's outfitted with a 10&#189;-inch quick-release vice, mounted on the
+        left-hand end to make the most of the space in the workshop (despite me
+        being right-handed).<br/>
+        I really enjoyed making this - pine is a lovely material to work with,
+        and converting a stack of 2x4s into a large piece of furniture was
+        exceptionally rewarding. It was a particularly challenging project as
+        I did it just using a Black &amp; Decker workmate.<br/>
+        The project took me 5 months start to finish, although there were
+        significant pauses during that time. I also had to start-over as it
+        emerged the first batch of 2x4s were far too warped to be useable and
+        couldn't be laminated straight. Cutting my losses and restarting was
+        gutting, but the right call.
+        <br/>
+      <b>Further Information:</b> Blog post TBD.<br/>
     </div>
   </div>
   <div class="sticky_footer_spacer"></div>
